issue9#: implement ProblemDetailService and validation advice for product errors